--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
   },
   "homepage": "https://github.com/nico-vrn/Badgeuse#readme",
   "dependencies": {
-    "nfc-pcsc": "^0.8.1"
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
+    "mangodb": "^1.0.0",
+    "mongoose": "^8.3.5",
+    "nfc-pcsc": "^0.8.1",
+    "serialport": "^12.0.0"
   }
 }
