--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mangodb": "^1.0.0",
     "mongoose": "^8.3.5",
     "nfc-pcsc": "^0.8.1",
-    "serialport": "^12.0.0"
+    "serialport": "^12.0.0",
+    "sqlite3": "^5.1.7"
   }
 }
